k8s-manifests/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart 
  namespace: rfid
  labels:
    app: cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          image: mangesh22898/cart-service:v2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart
  ports:
    - name: http
      port: 80
      targetPort: 80
