k8s-manifests/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: rfid
  labels:
    app: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: mangesh22898/orders-service:v2
          volumeMounts:
            - name: orders-storage
              mountPath: /data/orders
          ports:
            - containerPort: 80
      volumes:
        - name: orders-storage
          persistentVolumeClaim:
            claimName: orders-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders
  ports:
    - name: http
      port: 80
      targetPort: 80
